[package]
name = "pktaddikt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "2.0.0"
getopts = "0.2"
tracing = "0.1"
rangemap = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slab = "0.4"

[dev-dependencies]
tracing-test = "0.1"
regex = { version = "1", features = ["unicode-case"] }
