[package]
name = "pktaddikt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "2.0.0"
tracing = "0.1"
rangemap = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slab = "0.4"
crossbeam-channel = "0.5"
memchr = "2"
base62 = "2.2"
strum = "0.28"
strum_macros = "0.28"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
smallvec = "1.15"


[dev-dependencies]
tracing-test = "0.1"
regex = { version = "1", features = ["unicode-case"] }
